Added checkbox hack

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 			</section>
 			<button class='reset'>Reset</button>
 		</section>
+
 		<div id='psm-checkbox'>
-			<input type='checkbox' id='psm' checked vlaue='1'>
-			<label id='psm' for='psm'>Power Saving Mode</label>
+			<label for='psm'>Power Saving Mode</label>
+			<input type='checkbox' id='psm'>
+			<div class='colour-tester'>
+			</div>
 		</div>
 	</section>
 
