--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 			<button class='reset'>Reset</button>
 		</section>
 
+		
+		<label for='psm' class='checkbox-label'>Power Saving Mode</label>
+		<input type='checkbox' id='psm'>
 		<div id='psm-checkbox'>
-			<label for='psm'>Power Saving Mode</label>
-			<input type='checkbox' id='psm'>
-			<div class='colour-tester'>
-			</div>
 		</div>
 	</section>
 
