PSM button styling and updated ReadMe

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 			<button class='reset'>Reset</button>
 		</section>
 
-		
-		<label for='psm' class='checkbox-label'>Power Saving Mode</label>
-		<input type='checkbox' id='psm'>
-		<div id='psm-checkbox'>
+		<div class='label-container'>
+			<label for='psm' class='checkbox-label'>Power Saving Mode</label>
 		</div>
+		<input type='checkbox' id='psm'>
+		<div id='psm-checkbox'></div>
 	</section>
 
 		<script src='src/Thermostat.js'></script>
