--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="lib/jasmine-2.0.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/Thermostat.js"></script>
+  <script type="text/javascript" src="public/js/Thermostat.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
